crates/rome_js_formatter/tests/specs/prettier/js/do/do.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: do.js
---
# Input
```js
const envSpecific = {
  domain:
    do {
      if(env === 'production') 'https://abc.mno.com/';
      else if(env === 'development') 'http://localhost:4000';
    }
};

let x = do {
  let tmp = f();
  tmp * tmp + 1
};

let y = do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

function foo() {
  return (
    <nav>
      <Home />
      {
        do {
          if (loggedIn) {
            <LogoutButton />
          } else {
            <LoginButton />
          }
        }
      }
    </nav>
  );
}

(do {});
(do {} + 1);
(1 + do {});
() => do {};

(do {
  switch(0) {
    case 0: "foo";
    case 1: break;
  }
});

() => do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};

```

# Output
```js
const envSpecific = {
  domain:
    do {
      if(env === 'production') 'https://abc.mno.com/';
else
if (env === "development") "http://localhost:4000";
}
}

let x =
do {
  let tmp = f();
  tmp * tmp + 1
};

let y =
do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

function foo() {
  return (
    <nav>
      <Home />
      {
        do {
          if (loggedIn) {
            <LogoutButton />
          } else {
            <LoginButton />
          }
        }
      }
    </nav>
  );
}

(
do {});
(
do {} + 1);
(1 +
do {});
() =>
do {};

(
do {
  switch(0) {
    case 0: "foo";
    case 1: break;
  }
});

() =>
do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};

```

# Errors
```
error[SyntaxError]: expected an expression, or an assignment but instead found 'do'
  ┌─ do.js:3:5
  │
3 │     do {
  │     ^^ Expected an expression, or an assignment here

error[SyntaxError]: expected `:` but instead found `{`
  ┌─ do.js:3:8
  │
3 │     do {
  │        ^ unexpected

error[SyntaxError]: expected `,` but instead found `===`
  ┌─ do.js:4:14
  │
4 │       if(env === 'production') 'https://abc.mno.com/';
  │              ^^^ unexpected

error[SyntaxError]: expected a function body but instead found ''https://abc.mno.com/''
  ┌─ do.js:4:32
  │
4 │       if(env === 'production') 'https://abc.mno.com/';
  │                                ^^^^^^^^^^^^^^^^^^^^^^ Expected a function body here

error[SyntaxError]: expected `:` but instead found `;`
  ┌─ do.js:4:54
  │
4 │       if(env === 'production') 'https://abc.mno.com/';
  │                                                      ^ unexpected

error[SyntaxError]: expected a statement but instead found 'else'
  ┌─ do.js:5:7
  │
5 │       else if(env === 'development') 'http://localhost:4000';
  │       ^^^^ Expected a statement here

error[SyntaxError]: expected a statement but instead found '}
}'
  ┌─ do.js:6:5
  │  
6 │ ┌     }
7 │ │ };
  │ └─^ Expected a statement here

error[SyntaxError]: expected an expression, or an assignment but instead found 'do'
  ┌─ do.js:9:9
  │
9 │ let x = do {
  │         ^^ Expected an expression, or an assignment here

error[SyntaxError]: expected `while` but instead found `;`
   ┌─ do.js:12:2
   │
12 │ };
   │  ^ unexpected

error[SyntaxError]: expected an expression, or an assignment but instead found 'do'
   ┌─ do.js:14:9
   │
14 │ let y = do {
   │         ^^ Expected an expression, or an assignment here

error[SyntaxError]: expected `while` but instead found `;`
   ┌─ do.js:18:2
   │
18 │ };
   │  ^ unexpected

error[SyntaxError]: expected `}` but instead found `do`
   ┌─ do.js:25:9
   │
25 │         do {
   │         ^^ unexpected

error[SyntaxError]: expected `}` but instead found `if`
   ┌─ do.js:26:11
   │
26 │           if (loggedIn) {
   │           ^^ unexpected

error[SyntaxError]: expected `)` but instead found `do`
   ┌─ do.js:37:2
   │
37 │ (do {});
   │  ^^ unexpected

error[SyntaxError]: expected `while` but instead found `)`
   ┌─ do.js:37:7
   │
37 │ (do {});
   │       ^ unexpected

error[SyntaxError]: expected `)` but instead found `do`
   ┌─ do.js:38:2
   │
38 │ (do {} + 1);
   │  ^^ unexpected

error[SyntaxError]: expected `while` but instead found `+`
   ┌─ do.js:38:8
   │
38 │ (do {} + 1);
   │        ^ unexpected

error[SyntaxError]: expected an expression but instead found 'do'
   ┌─ do.js:39:6
   │
39 │ (1 + do {});
   │      ^^ Expected an expression here

error[SyntaxError]: expected `while` but instead found `)`
   ┌─ do.js:39:11
   │
39 │ (1 + do {});
   │           ^ unexpected

error[SyntaxError]: expected a function body, or an expression but instead found 'do'
   ┌─ do.js:40:7
   │
40 │ () => do {};
   │       ^^ Expected a function body, or an expression here

error[SyntaxError]: expected `while` but instead found `;`
   ┌─ do.js:40:12
   │
40 │ () => do {};
   │            ^ unexpected

error[SyntaxError]: expected `)` but instead found `do`
   ┌─ do.js:42:2
   │
42 │ (do {
   │  ^^ unexpected

error[SyntaxError]: expected `while` but instead found `)`
   ┌─ do.js:47:2
   │
47 │ });
   │  ^ unexpected

error[SyntaxError]: expected a function body, or an expression but instead found 'do'
   ┌─ do.js:49:7
   │
49 │ () => do {
   │       ^^ Expected a function body, or an expression here

error[SyntaxError]: expected `while` but instead found `;`
   ┌─ do.js:54:2
   │
54 │ };
   │  ^ unexpected

error: Unexpected token. Did you mean `{'}'}` or `&rbrace;`?
   ┌─ do.js:31:9
   │
31 │         }
   │         ^

error: Unexpected token. Did you mean `{'}'}` or `&rbrace;`?
   ┌─ do.js:32:7
   │
32 │       }
   │       ^


```


